--- a/css/main.css
+++ b/css/main.css
@@ -236,6 +236,7 @@ button:hover {
   height: auto;
   max-width: 100vw;
   max-height: 50vh;
+  min-height: 25rem;
 }
 
 .article ul li {
@@ -1590,7 +1591,7 @@ footer img {
 }
 
 .category-selection > ul > li > figure {
-  max-height: 250px;
+  max-height: 350px;
   overflow: hidden;
   border-top-left-radius: 0.8rem;
   border-top-right-radius: 0.8rem;
